Cleared the user log after each time the content is processed

--- a/app/views/interface/management/management.overview.ejs
+++ b/app/views/interface/management/management.overview.ejs
@@ -5,7 +5,7 @@
 <h3>Force processing of learning paths</h3>
 
 <button id="forceProcess" onclick="process()">Force processing</button>
-<button id="updateLog" onclick="updateLog()">Updata log</button>
+<button id="updateLog" onclick="updateLog()">Update log</button>
 
 <h3>Log processing output</h3>
 
