Added a basepath variable to the ejs views in order to get the base path from the .env file

--- a/app/views/interface/management/management.overview.ejs
+++ b/app/views/interface/management/management.overview.ejs
@@ -53,6 +53,7 @@
 </style>
 
 <script>
+    let basePath = "<%= basePath %>"
     function filterLog() {
       // Declare variables
       var input, filter, ul, li, a, i, txtValue;
@@ -97,7 +98,7 @@
         // Send a request to the server to start processing
         $.ajax({
             type: "GET",
-            url: '/api/manage/forceProcess',
+            url: basePath + '/api/manage/forceProcess',
             success: (data) => {
                 // When processing is done, the server sends a response
                 if (data == "done"){
