--- a/app/views/shared/header.ejs
+++ b/app/views/shared/header.ejs
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="<%= basePath %>/css/bootstrap.min.css">
 
         <!-- JQuery and Bootstrap -->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
+        <script src="<%= basePath %>/js/jquery.min.js"></script>
+        <script src="<%= basePath %>/js/bootstrap.min.js"></script>
 
         <!-- Fontawesome -->
-        <script defer src="/js/solid.js"></script>
-        <script defer src="/js/fontawesome.js"></script>
+        <script defer src="<%= basePath %>/js/solid.js"></script>
+        <script defer src="<%= basePath %>/js/fontawesome.js"></script>
     </head>
     
     <body>
