updated login page not to display password. Added new processing and logging system. Now learning objects are only processed if any file in their folder has been changed. Also redesigned the logging system to cope with this incremental processing.

--- a/app/views/interface/management/management.overview.ejs
+++ b/app/views/interface/management/management.overview.ejs
@@ -96,6 +96,7 @@
             type: "GET",
             url: basePath + '/api/manage/logsraw',
             success: (data) => {
+                data = data.replace(/\\n/g, "</br>"); // replace newline characters
                 let lines = JSON.parse(data);
                 resetLog(lines);
             }
