--- a/app/views/interface/management/management.overview.ejs
+++ b/app/views/interface/management/management.overview.ejs
@@ -11,11 +11,20 @@
 
 <input type="text" id="myInput" onkeyup="filterLog()" placeholder="Search...">
 
+<div id="liveLog"></div>
+
 <ul id="myUL">
     
 </ul>
 
 <style>
+    #liveLog {
+        height: 250px;
+        width: 100%;
+        border: solid black 1px;
+        overflow-y: scroll;
+    }
+
     #myInput {
         background-position: 10px 12px; /* Position the search icon */
         background-repeat: no-repeat; /* Do not repeat the icon image */
@@ -70,6 +79,21 @@
       }
     }
 
+    function updateLiveLog(){
+        $("#liveLog").empty()
+        $.ajax({
+            type: "GET",
+            url: basePath + '/api/manage/livelogs',
+            success: (data) => {
+                // When processing is done, the server sends a response
+                let lines = JSON.parse(data);
+                lines.forEach(line => $("#liveLog").append($("<div>").html(line)))
+                setTimeout(() => {updateLiveLog()}, 1000)
+            },
+            error: (err) => {console.log("An error occured during processing")}
+        })
+    }
+
     function resetLog(newLogData){
         ul = document.getElementById("myUL");
         $(ul).empty(); // Clear the list
@@ -103,6 +127,10 @@
         })
     }
 
+    function getLiveLogLines(){
+       
+    }
+
     function process(){
         // Send a request to the server to start processing
         $.ajax({
@@ -120,6 +148,7 @@
     }
     $(document).ready(() => {
         updateLog();
+        updateLiveLog();
     })
 </script>
 
