Added image lookup for image tags in markdown with relative paths to items in learning object. Also fixed the display of the log on windows. Added global style for the learning objects that can be imported by any website rendering the learning objects

--- a/app/views/interface/management/management.overview.ejs
+++ b/app/views/interface/management/management.overview.ejs
@@ -127,6 +127,7 @@
             type: "GET",
             url: basePath + '/api/manage/logsraw',
             success: (data) => {
+                data = data.replace(/\\\\/g, "/"); // replace double backslashes by slashes -> to make pathnames work on windows.
                 data = data.replace(/\\n/g, "</br>"); // replace newline characters
                 let lines = JSON.parse(data);
                 resetLog(lines);
