Added table styles + way of automatically adding link to simulator

--- a/app/static/css/public/dwengo_learning_path_styles.css
+++ b/app/static/css/public/dwengo_learning_path_styles.css
@@ -58,6 +58,11 @@
   overflow: hidden;
 }
 
+.dwengo_content.table_container {
+  width: 100%;
+  overflow-x: auto;
+}
+
 /* Assignment CSS */
 
 .dwengo-content.assignment .title::after {
