--- a/app/views/interface/management/management.overview.ejs
+++ b/app/views/interface/management/management.overview.ejs
@@ -84,7 +84,7 @@
         $.ajax({
             type: "GET",
             url: basePath + '/api/manage/livelogs',
-            hrFields: {
+            xhrFields: {
                 withCredentials: true
             },
             success: (data) => {
